# tp_analyzer

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  app.c
app/tasks/: ui_task.c
app/ui/: screens.h
app/ui/screens/: scr_boot.c  scr_home.c
bsp/: CMakeLists.txt
bsp/rp2350/: board_config.h
drivers/: CMakeLists.txt
drivers/display/: st7789.c
drivers/encoder/: encoder.c  encoder.h
firmware/: CMakeLists.txt  lv_conf.h  main.c
firmware/app/: CMakeLists.txt  app.h
firmware/app/lvgl/: screen_manager.c  screen_manager.h  screen_update.c  screen_update.h  screens.h
firmware/app/lvgl/helpers/: animations.c  animations.h  chart.c  chart.h  components.c  components.h
firmware/app/lvgl/screens/: scr_boot.c  scr_datetime.c  scr_datetime.h  scr_fft.c  scr_fft.h  scr_information.c  scr_information.h  scr_menu.c  scr_menu.h  scr_oscilloscope.c  scr_oscilloscope.h  scr_settings.c  scr_settings.h
firmware/app/lvgl/ui/: CMakeLists.txt  ui.c  ui.h  ui_themes.c  ui_themes.h
firmware/app/lvgl/ui/components/: ui_comp.c  ui_comp.h  ui_comp_conttopbar.c  ui_comp_conttopbar.h  ui_comp_hook.c  ui_comp_hook.h
firmware/app/lvgl/ui/fonts/: ui_font_MonoBold11.c  ui_font_MonoBold13.c  ui_font_MonoBold19.c  ui_font_MonoBold24.c  ui_font_MonoMed10.c  ui_font_MonoMed11.c  ui_font_MonoReg10.c  ui_font_MonoReg11.c  ui_font_MonoReg8.c  ui_font_MonoReg9.c  ui_font_SansBold10.c  ui_font_SansBold13.c  ui_font_SansBold15.c  ui_font_SansBold16.c  ui_font_SansBold24.c  ui_font_SansBold9.c  ui_font_SansMed10.c  ui_font_SansMed12.c  ui_font_SansReg10.c  ui_font_SansReg11.c
firmware/app/lvgl/ui/images/: ui_img_1310808144.c  ui_img_icons_ic_back_png.c  ui_img_icons_ic_bolt_png.c  ui_img_icons_ic_check_png.c  ui_img_icons_ic_chevdown_png.c  ui_img_icons_ic_chevright_png.c  ui_img_icons_ic_chevup_png.c  ui_img_icons_ic_datetime_png.c  ui_img_icons_ic_fft_png.c  ui_img_icons_ic_freq_png.c  ui_img_icons_ic_info_png.c  ui_img_icons_ic_measure_png.c  ui_img_icons_ic_realtime_png.c  ui_img_icons_ic_record_png.c  ui_img_icons_ic_scale_png.c  ui_img_icons_ic_screen_png.c  ui_img_icons_ic_sd_png.c  ui_img_icons_ic_settings_png.c  ui_img_icons_ic_time_png.c  ui_img_icons_icon_fft_chart_png.c  ui_img_icons_icon_plotter_chart_png.c
firmware/app/lvgl/ui/screens/: ui_scrBoot.c  ui_scrBoot.h  ui_scrDatetime.c  ui_scrDatetime.h  ui_scrFFT.c  ui_scrFFT.h  ui_scrInformation.c  ui_scrInformation.h  ui_scrMenu.c  ui_scrMenu.h  ui_scrOscilloscope.c  ui_scrOscilloscope.h  ui_scrPlotter.c  ui_scrPlotter.h  ui_scrSettings.c  ui_scrSettings.h
firmware/app/tasks/: ad_task.c  ui_task.c
firmware/bsp/rp2350/: board_config.h
firmware/drivers/: CMakeLists.txt
firmware/drivers/display/: ili9486.c  ili9486.h  ili9486_write.pio  st7789.c  st7789.h
firmware/hal/: CMakeLists.txt  hal_8080_write.pio  hal_adc.h  hal_display.c  hal_display.h  hal_dma.c  hal_dma.h  hal_gpio.h  hal_pio.c  hal_pio.h  hal_rtc.c  hal_rtc.h  hal_spi.c  hal_spi.h
firmware/rtos/freertos/: FreeRTOSConfig.h
firmware/services/: CMakeLists.txt
firmware/services/dsp/: CMakeLists.txt  dsp.c  dsp.h
firmware/services/lvgl/: lvgl_port.c  lvgl_port.h
hal/: CMakeLists.txt  hal_display.c  hal_gpio.c  hal_gpio.h
services/lvgl/: lvgl_port.c
ui/: .gitignore  ui.sll  ui.spj
ui/components/: contTopBar.ecomp
